--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">QuickConnect</string>
+    <string name="login">Login</string>
+    <string name="Register">Register</string>
+    <string name="email">Email\n</string>
+    <string name="password">password\n</string>
+    <string name="click_to_login">click_to_login</string>
+    <string name="click_to_register">click_to_register</string>
+    <string name="logout">logout</string>
 </resources>
