--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="click_to_login">click_to_login</string>
     <string name="click_to_register">click_to_register</string>
     <string name="logout">logout</string>
+    <string name="go_to_sms">Go To SMS</string>
+    <string name="back" />
+    <string name="change_language">Change Language</string>
+    <string name="send">Send</string>
+    <string name="enter_message">Enter Message</string>
 </resources>
