--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="settings">Settings</string>
     <string name="Home">home</string>
     <string name="username">username</string>
+    <string name="quickconnect">QuickConnect</string>
+    <string name="job_role">Job_Role</string>
+    <string name="message">message</string>
 
 
 </resources>
