--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,12 @@
     <string name="close_nav">Close navigation drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="home">home</string>
-    <string name="profile">profile</string>
-    <string name="call">call</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
+    <string name="call">Call</string>
     <string name="Logout">Logout</string>
     <string name="settings">Settings</string>
-    <string name="Home">home</string>
+    <string name="Home">Home</string>
     <string name="username">Username</string>
     <string name="quickconnect">QuickConnect</string>
     <string name="job_role">Job Role</string>
@@ -125,7 +125,8 @@
     <string name="confirm_password_edt">Confirm Password</string>
     <string name="register_btn">Register</string>
     <string name="user_name_edt">Username</string>
-    <string name="video_call">Video_Call</string>
+    <string name="video_call">Video Call</string>
     <string name="tap_mic_and_speek">tap microphone and speak\n</string>
+    <string name="chatbot">Chatbot</string>
 
 </resources>
