--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,58 @@
     <string name="voice_video_call">Voice/Video Call</string>
     <string name="messaging">Messaging</string>
     <string name="qc_chatbot">QC ChatBot</string>
+    <string name="quickconnect_dashboard">QuickConnect Dashboard</string>
+    <string name="queue_number_10">Queue Number: 10</string>
+    <string name="steps_to_take">Steps to Take</string>
+    <string name="_1_check_your_recent_transactions_to_identify_any_discrepancies_n2_verify_your_account_balance_to_ensure_accuracy_n3_have_your_account_number_ready_for_reference">1. Check your recent transactions to identify any discrepancies.\n2. Verify your account balance to ensure accuracy.\n3. Have your account number ready for reference.</string>
+    <string name="estimated_time">Estimated Time</string>
+    <string name="approximately_10_minutes">Approximately 10 minutes</string>
+    <string name="please_patiently_wait_and_prepare_for_a_customer_service_agent_to_accept_the_request">Please patiently wait and prepare for a customer service agent to accept the request.</string>
+    <string name="preparation_details">Preparation Details</string>
+    <string name="please_have_the_following_information_ready_n_your_account_number_n_recent_transactions_n_any_relevant_documents">Please have the following information ready:\n- Your account number\n- Recent transactions\n- Any relevant documents</string>
+    <string name="add_files_photos">Add Files/Photos</string>
+    <string name="a_support_agent_has_accepted_your_request">A support agent has accepted your request</string>
+    <string name="go_to_chat">Go to chat</string>
+    <string name="this_chat_has_been_closed">This Chat has been Closed</string>
+    <string name="which_account_do_you_want_to_register">Which account do you want to register?</string>
+    <string name="customer">Customer</string>
+    <string name="employee">Employee</string>
+    <string name="helloq">Hello,</string>
+    <string name="quick_nconnect">Quick \nConnect</string>
+    <string name="instant_customer_service_assistance">Instant Customer Service Assistance</string>
+    <string name="message_nus">Message \nUs</string>
+    <string name="get_in_touch_with_out_team">Get in touch with out team</string>
+    <string name="voice_video_call_">Voice/Video Call</string>
+    <string name="get_in_touch_with_out_team_">Get in touch with out team</string>
+    <string name="qc_nchatbot">QC\nChatBot</string>
+    <string name="ai_powered_quickconnect_chatbot">AI-Powered QuickConnect Chatbot</string>
+    <string name="profile_">Profile</string>
+    <string name="user_profile_and_settings">User Profile and settings</string>
+    <string name="reconnect_and_chat">Reconnect and Chat</string>
+    <string name="reconnect_with_ease">Reconnect with Ease</string>
+    <string name="profile_and_settings">Profile and Settings</string>
+    <string name="name">Name</string>
+    <string name="edit_personal_details">Edit personal details</string>
+    <string name="profile__">Profile</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="change_password">Change Password</string>
+    <string name="notifications">Notifications</string>
+    <string name="notifications__">Notifications</string>
+    <string name="regional">Regional</string>
+    <string name="language">Language</string>
+    <string name="logout_">Logout</string>
+    <string name="describe_your_enquiry">Describe your enquiry</string>
+    <string name="send_">Send</string>
+    <string name="enter_an_enquiry_here_for_us_to_suggest_a_channel_for_you">Enter an enquiry here for us to suggest a channel for you:</string>
+    <string name="or_n_choose_one_yourself">OR \n choose one yourself</string>
+    <string name="create_new_chat">Create New Chat</string>
+    <string name="create_a_call_request">Create a Call Request</string>
+    <string name="go_to_faq">Go to FAQ</string>
+    <string name="help_channels">Help Channels</string>
+    <string name="enquiry_helper">Enquiry Helper</string>
+    <string name="chats">Chats</string>
+    <string name="call_requests">Call Requests</string>
+    <string name="new_call">New Call</string>
 
 
     <string-array name="language_array">
