--- a/app/src/main/res/values-ta-rIN/strings.xml
+++ b/app/src/main/res/values-ta-rIN/strings.xml
@@ -87,4 +87,66 @@
     <string name="dont_have_an_account">கணக்கு இல்லையா?</string>
 
 
+
+
+
+
+    <string name="voice_video_call">குரல்/வீடியோ அழைப்பு</string>
+    <string name="messaging">செய்தியான்மை</string>
+    <string name="qc_chatbot">QC சாட்பாட்</string>
+    <string name="quickconnect_dashboard">QuickConnect டாஷ்போர்டு</string>
+    <string name="queue_number_10">வரிசை எண்: 10</string>
+    <string name="steps_to_take">எடுக்க வேண்டிய படிகள்</string>
+    <string name="_1_check_your_recent_transactions_to_identify_any_discrepancies_n2_verify_your_account_balance_to_ensure_accuracy_n3_have_your_account_number_ready_for_reference">1. முரண்பாடுகளை கண்டறிய உங்கள் சமீபத்திய பரிவர்த்தனைகளை சரிபார்க்கவும்.\n2. துல்லியம் உறுதி செய்ய உங்கள் கணக்கு இருப்பை சரிபார்க்கவும்.\n3. குறிப்புக்காக உங்கள் கணக்கு எண்ணை தயாராக வைக்கவும்.</string>
+    <string name="estimated_time">மதிப்பிடப்பட்ட நேரம்</string>
+    <string name="approximately_10_minutes">சுமார் 10 நிமிடங்கள்</string>
+    <string name="please_patiently_wait_and_prepare_for_a_customer_service_agent_to_accept_the_request">தயவு செய்து பொறுமையாக காத்திருந்து, ஒரு வாடிக்கை சேவை அதிகாரியை கோரிக்கையை ஏற்க தயாராகவும்.</string>
+    <string name="preparation_details">தயாரிப்பு விவரங்கள்</string>
+    <string name="please_have_the_following_information_ready_n_your_account_number_n_recent_transactions_n_any_relevant_documents">தயவு செய்து பின்வரும் தகவல்களை தயாராக வைக்கவும்:\n- உங்கள் கணக்கு எண்\n- சமீபத்திய பரிவர்த்தனைகள்\n- ஏதேனும் தொடர்புடைய ஆவணங்கள்</string>
+    <string name="add_files_photos">கோப்புகள்/புகைப்படங்களை சேர்க்கவும்</string>
+    <string name="a_support_agent_has_accepted_your_request">ஒரு ஆதரவு அதிகாரி உங்கள் கோரிக்கையை ஏற்றுள்ளார்</string>
+    <string name="go_to_chat">சாட்டிற்கு செல்லவும்</string>
+    <string name="this_chat_has_been_closed">இந்த சாட் மூடப்பட்டுள்ளது</string>
+    <string name="which_account_do_you_want_to_register">நீங்கள் எந்த கணக்கை பதிவு செய்ய விரும்புகிறீர்கள்?</string>
+    <string name="customer">வாடிக்கையாளர்</string>
+    <string name="employee">பணியாளர்</string>
+    <string name="helloq">வணக்கம்,</string>
+    <string name="quick_nconnect">விரைவு \nஇணைப்பு</string>
+    <string name="instant_customer_service_assistance">உடனடி வாடிக்கையாளர் சேவை உதவி</string>
+    <string name="message_nus">செய்தி \nஎங்களுக்கு</string>
+    <string name="get_in_touch_with_out_team">எங்கள் குழுவுடன் தொடர்பு கொள்ளவும்</string>
+    <string name="voice_video_call_">குரல்/வீடியோ அழைப்பு</string>
+    <string name="get_in_touch_with_out_team_">எங்கள் குழுவுடன் தொடர்பு கொள்ளவும்</string>
+    <string name="qc_nchatbot">QC\nசாட்பாட்</string>
+    <string name="ai_powered_quickconnect_chatbot">AI சக்திவாய்ந்த QuickConnect சாட்பாட்</string>
+    <string name="profile_">சுயவிவரம்</string>
+    <string name="user_profile_and_settings">பயனர் சுயவிவரம் மற்றும் அமைப்புகள்</string>
+    <string name="reconnect_and_chat">மீண்டும் இணைந்து சாட் செய்யவும்</string>
+    <string name="reconnect_with_ease">எளிதாக மீண்டும் இணைக்கவும்</string>
+    <string name="profile_and_settings">சுயவிவரம் மற்றும் அமைப்புகள்</string>
+    <string name="name">பெயர்</string>
+    <string name="edit_personal_details">தனிப்பட்ட விவரங்களை திருத்தவும்</string>
+    <string name="profile__">சுயவிவரம்</string>
+    <string name="edit_profile">சுயவிவரத்தை திருத்து</string>
+    <string name="change_password">கடவுச்சொல்லை மாற்று</string>
+    <string name="notifications">அறிவிப்புகள்</string>
+    <string name="notifications__">அறிவிப்புகள்</string>
+    <string name="regional">பிராந்திய</string>
+    <string name="language">மொழி</string>
+    <string name="logout_">வெளியேறு</string>
+    <string name="describe_your_enquiry">உங்கள் விசாரணையை விவரிக்கவும்</string>
+    <string name="send_">அனுப்பு</string>
+    <string name="enter_an_enquiry_here_for_us_to_suggest_a_channel_for_you">ஒரு சேனலை பரிந்துரைக்க உங்கள் விசாரணையை இங்கே உள்ளிடவும்:</string>
+    <string name="or_n_choose_one_yourself">அல்லது \n நீங்களே ஒன்றை தெரிவு செய்யவும்</string>
+    <string name="create_new_chat">புதிய அரட்டையை உருவாக்கு</string>
+    <string name="create_a_call_request">அழைப்பு கோரிக்கையை உருவாக்கு</string>
+    <string name="go_to_faq">FAQ க்கு செல்லவும்</string>
+    <string name="help_channels">உதவி சேனல்கள்</string>
+    <string name="enquiry_helper">விசாரணை உதவியாளர்</string>
+    <string name="chats">அரட்டைகள்</string>
+    <string name="call_requests">அழைப்பு கோரிக்கைகள்</string>
+    <string name="new_call">புதிய அழைப்பு</string>
+
+
+
 </resources>
