--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,10 +150,7 @@
     <string name="chats">Chats</string>
     <string name="call_requests">Call Requests</string>
     <string name="new_call">New Call</string>
-    <string name="voice_call">voice call</string>
-    <string name="Request">Request</string>
-    <string name="profile_and_settings_">Profile and Settings</string>
-    <string name="address">Address</string>
+
 
 
     <string-array name="language_array">
@@ -182,6 +179,16 @@
         <item>Multilingual and International Support</item>
         <item>Fraud Detection and Prevention</item>
     </string-array>
+
+    <string name="default_language" translatable="false">English</string>
+    <string name="quickassist">QuickAssist</string>
+    <string name="profile_and_settings__">Profile and Settings</string>
+    <string name="chatbot">Chatbot</string>
+    <string name="voice_call">voice call</string>
+    <string name="Request">Request</string>
+    <string name="profile_and_settings_">Profile and Settings</string>
+    <string name="address">Address</string>
+    <string name="call_specialist">Call Specialist</string>
 
 
 </resources>
