--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,8 @@
     <string name="profile_and_settings_">Profile and Settings</string>
     <string name="address">Address</string>
     <string name="call_specialist">Call Specialist</string>
+    <string name="newmessage">Messaging</string>
+    <string name="message_a_support_agent">Message a Support Agent</string>
 
 
 </resources>
